<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:background="#264075"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">



  <ScrollView
      android:layout_width="300dp"
      android:layout_height="800dp"
      android:layout_centerHorizontal="true"
      android:background="#ffff"
      android:alpha="0.9"
      android:id="@+id/scrollView">

      <LinearLayout
          android:layout_width="280dp"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="top"
          style="@style/AlertDialog.AppCompat.Light"
          android:id="@+id/linearLayoutMainID"
          >


          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tournamentTitleId"
              android:textSize="20sp"
              android:textStyle="bold"

              android:text="@string/tournament_title"/>

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/editextTourTitleId"
              android:singleLine="true"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tournamentRoundId"
              android:textSize="20sp"
              android:textStyle="bold"
              android:text="@string/tournament_round"/>

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/editextTourRoundId"
              android:singleLine="true"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/firstPlayerTitleId"
              android:textSize="20sp"
              android:textStyle="bold"
              android:text="@string/player_one"/>

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/editextFirstPlayerId"
              android:singleLine="true"
              android:capitalize="characters" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/secondPlayerTitleId"
              android:textSize="20sp"
              android:textStyle="bold"
              android:text="@string/player_two"/>

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/editextSecondPlayerId"
              android:singleLine="true"
              android:capitalize="characters" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/setsNumberId"
              android:textSize="20sp"
              android:textStyle="bold"
              android:text="@string/sets_number"/>

          <SeekBar
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/setsSeekBarId"
              android:textSize="20sp"
              android:textStyle="bold"
              android:progress="2"
              android:elevation="1dp"
            />


      </LinearLayout>

      </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_media_play"
        android:id="@+id/fabButtonID"
        app:fabSize="normal"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:borderWidth="0dp"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:rippleColor="@color/primary_dark"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
    

