<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary_dark"
    tools:context="com.apps.orfanak.tennisscoreboard.FirstSet">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitleID"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:text="@string/tournament_title"
        android:paddingLeft="16dp"
        android:background="@drawable/gradient"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRoundID"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:background="@drawable/gradient"
        android:layout_below="@+id/textViewTitleID"
        android:text="@string/tournament_round"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRoundID"
        android:layout_marginBottom="3dp"
        android:id="@+id/line1"
        android:gravity="center"

        >

        <ImageButton
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/serveP1ID"
            android:focusableInTouchMode="true"
            android:background="@mipmap/tennisball"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="3dp"
            android:alpha="0.6"
            android:elevation="2dp"

            />

        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            rv_centered="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/buttonPlayer1"
            android:text="Player One"
            android:textColor="#cccc"
            android:padding="5dp"
            android:textSize="16sp"
            android:layout_below="@+id/textViewRoundID"
            android:singleLine="true"
            android:capitalize="none"
            android:textAlignment="textStart"
            android:width="150dp"
            android:gravity="center|center_horizontal|left"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold" />

        </com.andexert.library.RippleView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet1P1Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:text="0"
            android:padding="5dp"
            android:background="@drawable/custom_button_style"
            android:layout_below="@+id/textViewRoundID"
            android:layout_toRightOf="@+id/buttonPlayer1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pointsP1"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:padding="5dp"
            android:textSize="40sp"
            android:text="0"
            android:background="@drawable/accent_button_shape"
            android:layout_toRightOf="@+id/textViewSet1P1Id"
            android:layout_below="@+id/textViewRoundID"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:id="@+id/line2"
        android:gravity="center"
        android:showDividers="middle">

        <ImageButton
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/serveP2ID"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="3dp"
            android:background="@mipmap/tennisball"
            android:layout_gravity="center_vertical"
            android:alpha="0.6"
            android:elevation="2dp"
            />

        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            rv_centered="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/buttonPlayer2"
            android:text="Player Two"
            android:textColor="#cccc"
            android:padding="5dp"
            android:capitalize="none"
            android:textAlignment="textStart"
            android:width="150dp"
            android:gravity="center|center_horizontal|left"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
        </com.andexert.library.RippleView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet1P2Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:padding="5dp"
            android:text="0"
            android:background="@drawable/custom_button_style"
            android:layout_below="@+id/buttonPlayer1"
            android:layout_toRightOf="@+id/buttonPlayer2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pointsP2"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:padding="5dp"
            android:text="0"
            android:background="@drawable/accent_button_shape"
            android:layout_toRightOf="@+id/textViewSet1P2Id"
            android:layout_below="@+id/buttonPlayer1"
            />

    </LinearLayout>



    <com.andexert.library.RippleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomBar"
        android:layout_centerHorizontal="true"
        rv_centered="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonNextSetID"
        android:text="@string/next_set"
        android:padding="5dp"
        android:textColor="#FFFF"
        android:background="@color/accent"
        android:textStyle="bold"
        android:textSize="22sp"
        android:visibility="invisible"/>

    </com.andexert.library.RippleView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:id="@+id/bottomBar"
            >



        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/cancelbuttonID"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            
            android:src="@mipmap/ic_undo"
            android:elevation="6dp"

            />


        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/buttonShareID"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/selectableItemBackground"
            android:src="@mipmap/ic_share"
            android:elevation="6dp"
            />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/buttonReplaySet"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackground"
            android:src="@mipmap/ic_reset"
            android:elevation="6dp"
            />

        </FrameLayout>


</RelativeLayout>
