<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary_dark"
    tools:context="com.apps.orfanak.tennisscoreboard.ThirdSet">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitleID"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffff"
        android:text="@string/tournament_title"
        android:paddingLeft="16dp"
        android:background="@drawable/gradient"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRoundID"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:layout_below="@+id/textViewTitleID"
        android:background="@drawable/gradient"
        android:text="@string/tournament_round"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRoundID"
        android:id="@+id/line1"
        android:gravity="center_horizontal|start">

        <ImageButton
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/serveP1ID"
            android:focusableInTouchMode="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="16dp"
            android:background="@mipmap/tennisball"
            android:alpha="0.6"

            />


        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            rv_centered="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPlayer1"
            android:text="Player One"
            android:textColor="#ffff"
            android:padding="2dp"
            android:textSize="16sp"
            android:layout_below="@+id/textViewRoundID"
            android:background="@drawable/button_shape"
            android:singleLine="true"
            android:capitalize="none"
            android:layout_gravity="center_vertical"
            android:textAlignment="textStart"
            android:width="150dp"
            android:textStyle="bold" />
        </com.andexert.library.RippleView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet1P1Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:text="0"
            android:padding="5dp"
            android:background="@drawable/custom_button_style_light"
            android:layout_below="@+id/textViewRoundID"
            android:layout_toRightOf="@+id/buttonPlayer1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet2P1Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:text="0"
            android:padding="5dp"
            android:background="@drawable/custom_button_style_light"
            android:layout_below="@+id/textViewRoundID"
            android:layout_toRightOf="@+id/buttonPlayer1"
            android:autoText="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet3P1Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:text="0"
            android:padding="5dp"
            android:background="@drawable/custom_button_style"
            android:layout_below="@+id/textViewRoundID"
            android:layout_toRightOf="@+id/buttonPlayer1"
            android:autoText="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pointsP1"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:padding="5dp"
            android:textSize="40sp"
            android:text="0"
            android:background="@drawable/accent_button_shape"
            android:layout_toRightOf="@+id/textViewSet1P1Id"
            android:layout_below="@+id/textViewRoundID"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:id="@+id/line2"
        android:gravity="center_horizontal|start"
        android:showDividers="middle">

        <ImageButton
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/serveP2ID"
            android:focusableInTouchMode="true"
            android:background="@mipmap/tennisball"
            android:paddingLeft="16dp"
            android:layout_gravity="center_vertical"

            android:alpha="0.6"
            />

        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            rv_centered="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPlayer2"
            android:text="Player Two"
            android:textColor="#ffff"
            android:padding="2dp"
            android:capitalize="none"
            android:textAlignment="textStart"
            android:layout_gravity="center_vertical"
            android:width="150dp"
            android:background="@drawable/button_shape"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        </com.andexert.library.RippleView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet1P2Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:padding="5dp"
            android:text="0"
            android:background="@drawable/custom_button_style_light"
            android:layout_below="@+id/buttonPlayer1"
            android:layout_toRightOf="@+id/buttonPlayer2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet2P2Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:text="0"
            android:padding="5dp"
            android:background="@drawable/custom_button_style_light"
            android:layout_below="@+id/textViewRoundID"
            android:layout_toRightOf="@+id/buttonPlayer2"
            android:autoText="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSet3P2Id"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:text="0"
            android:padding="5dp"
            android:background="@drawable/custom_button_style"
            android:layout_below="@+id/textViewRoundID"
            android:layout_toRightOf="@+id/buttonPlayer1"
            android:autoText="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pointsP2"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="40sp"
            android:padding="5dp"
            android:text="0"
            android:background="@drawable/accent_button_shape"
            android:layout_toRightOf="@+id/textViewSet1P2Id"
            android:layout_below="@+id/buttonPlayer1"
            />

    </LinearLayout>

    <com.andexert.library.RippleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomBar"
        android:layout_centerHorizontal="true"
        rv_centered="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonNextSetID"
        android:text="@string/next_set"
        android:padding="5dp"
        android:textColor="#FFFF"
        android:background="@color/accent"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bottomBar"
        android:visibility="invisible"/>
    </com.andexert.library.RippleView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:id="@+id/bottomBar"
        >
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/cancelbuttonID"
            android:layout_alignParentLeft="true"
            android:background="@mipmap/ic_undo"
            android:elevation="1dp"
            android:shadowRadius="3"
            />


        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/buttonShareID"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/ic_share"
            android:elevation="1dp"
            android:shadowRadius="3"
            />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/buttonReplaySet"
            android:layout_alignParentRight="true"
            android:background="@mipmap/ic_reset"
            android:elevation="1dp"
            android:shadowRadius="3"
            />
    </RelativeLayout>

</RelativeLayout>
